--- a/README.adoc
+++ b/README.adoc
@@ -271,6 +271,6 @@ Boot step-by-step:
 
 
 
-== License
+## License
 Spring Boot is Open Source software released under the
 https://www.apache.org/licenses/LICENSE-2.0.html[Apache 2.0 license].
